--- a/Week2/about.html
+++ b/Week2/about.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>week 2 html</title>
+    <title>About page</title>
   </head>
   <body>
-    <h1>learning.html</h1>
-    <a href="about.html">go to about page</a>
+    <h1>this is about page</h1>
+    <a href="index.html">go to home page</a>
   </body>
-  <img src="cat.jpeg" alt="" />
 </html>
