--- a/Week2/index.html
+++ b/Week2/index.html
@@ -9,13 +9,13 @@
     <h1>learning.html</h1>
     <a href="about.html">go to about page</a>
     <a href="dummy/dummy.html">go to dummy page</a>
-    <input type="hello">
-    <br>
-    <input type="number">
+    <input type="hello" />
+    <br />
+    <input type="number" />
     <button>click me</button>
-    
+
     <!-- comments none visibe  -->
-     <!-- command and forward / -->
+    <!-- command and forward / -->
   </body>
   <img src="cat.jpeg" alt="" />
 </html>
