added style and changed assignment 1 index

--- a/asssignment1/Index.html
+++ b/asssignment1/Index.html
@@ -7,5 +7,40 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Interactive media assignment 1</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rem tempore
+      et pariatur, in, doloremque harum provident, eius magni unde laudantium
+      aliquam officiis exercitationem odit? Exercitationem quos accusamus ad
+      recusandae!
+    </p>
+    <img src="luni.jpeg" alt="" />
+
+    <header class="my-class">
+      1. What was the first thing you paid attention to when interacting with
+      the experience?
+    </header>
+    <p>
+      When the page opens, you are greeted with floating images. There's a stage
+      in the middle that takes up most of the space and that is what first
+      caught my attention. As I interacted with it, I was drawn into its subtle
+      movement when the mouse hovers over the webpage.
+    </p>
+    <header class="my-class">
+      2. Spend two minutes with the experience and create a list of each of your
+      discrete actions.
+    </header>
+    <p>list</p>
+    <header>
+      3. What part of the experience did you spend the most time engaging with?
+    </header>
+    <p>
+      Because I was intrigued by the mouse causing objects to move, I spent the
+      most time clicking on objects to see where it redirects me and what
+      appears. I went back and forth between pages and simply hovering my mouse
+      to see if there is any correlation between the movements and exploring
+      content is in the webpage.
+    </p>
+  </body>
 </html>
