edited index and added style

--- a/asssignment1/Index.html
+++ b/asssignment1/Index.html
@@ -21,18 +21,18 @@
       1. What was the first thing you paid attention to when interacting with
       the experience?
     </header>
-    <p>
+    <p class="my-class">
       When the page opens, you are greeted with floating images. There's a stage
       in the middle that takes up most of the space and that is what first
       caught my attention. As I interacted with it, I was drawn into its subtle
       movement when the mouse hovers over the webpage.
     </p>
-    <header class="my-class">
+    <header class="my-class1">
       2. Spend two minutes with the experience and create a list of each of your
       discrete actions.
     </header>
     <p>list</p>
-    <header>
+    <header class="my-class1">
       3. What part of the experience did you spend the most time engaging with?
     </header>
     <p>
@@ -41,6 +41,32 @@
       appears. I went back and forth between pages and simply hovering my mouse
       to see if there is any correlation between the movements and exploring
       content is in the webpage.
+    </p>
+    <header class="my-class1">
+      4. What was the most common action in your two minute interaction with the
+      experience?
+    </header>
+    <p>Mouse movement based interactions and page redirection</p>
+
+    <header class="my-class1">
+      5. What is your impression of the intended primary goal of the interactive
+      experience?
+    </header>
+    <p>
+      Its an interaction base website that encourages users to be creative, and
+      explore the website. Bringing “coding life” to the real world for new and
+      innovative brands
+    </p>
+
+    <header class="my-class1">
+      6. How does the interactive experience communicate this primary goal?
+    </header>
+    <p>
+      Its focused on “next gen” and that is correlated to the unusual and
+      interactive/fun layout of the website. With 3D assets, floating motions
+      and exploration based interactions. This enhances the experience
+      encouraging creative thinking when navigating the website and shows that
+      its talents are creative, innovative and iconic.
     </p>
   </body>
 </html>
