changed index and style

--- a/asssignment1/Index.html
+++ b/asssignment1/Index.html
@@ -68,5 +68,16 @@
       encouraging creative thinking when navigating the website and shows that
       its talents are creative, innovative and iconic.
     </p>
+    <header class="my-class1">
+      7. What is your impression of how the experience should be interacted with
+      over time? (For how long and how many different times)
+    </header>
+    <p>
+      The experience could be interacted with over a short period of time. There
+      are mainly three pages. Which is the main page, app pages, and the talents
+      page. Users can explore this page within a couple of minutes but this
+      could vary depending on how much users choose to experiment with the
+      interactions
+    </p>
   </body>
 </html>
