added index and style css

--- a/asssignment1/Index.html
+++ b/asssignment1/Index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Interactive Media Assignment 1</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    
   </head>
   <body>
     <h1>Interactive media assignment 1</h1>
+    <header class="my-class2">
+      Jumi Suzuki-Carpenter S4022332
+    </header>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rem tempore
       et pariatur, in, doloremque harum provident, eius magni unde laudantium
@@ -17,7 +21,7 @@
     </p>
     <img src="luni.jpeg" alt="" />
 
-    <header class="my-class">
+    <header class="my-class my-class1">
       1. What was the first thing you paid attention to when interacting with
       the experience?
     </header>
@@ -78,6 +82,55 @@
       page. Users can explore this page within a couple of minutes but this
       could vary depending on how much users choose to experiment with the
       interactions
+    </p>
+    <header class="my-class1">
+      8. How does the interactive experience communicate how it should be
+      interacted with over time?
+    </header>
+    <p>
+      Using 3D assets and minimal text. The layout of the website and its
+      contents has minimal text, focusing on visuals and movement. This can
+      reflect how it encourages users to navigate the website with a creative
+      mind and continuous exploration
+    </p>
+    <header class="my-class1">
+      9. What other media forms (digital or otherwise) does the experience
+      reference?
+    </header>
+    <p>Mainly 3D modelling and UX design. Potentially colour understanding</p>
+
+    <header class="my-class1">
+      10. What does this reference/s communicate to you about how you should act
+      when engaging with your research experience?
+    </header>
+    <p>
+      I think to not assume what the intention of the website is and jump to
+      conclusions. I almost didn't choose this website as the complicated
+      navigation made me slightly not bothered to go further as I assumed it
+      would be hard to understand the content and intention.
+    </p>
+    <header class="my-class1">
+      11. What does this reference/s communicate to you about how you should
+      feel when engaging with your research experience?
+    </header>
+    <p>To be open minded and less harsh on the websites layout</p>
+    <header class="my-class1">
+      12. What is the most frustrating part of the interaction to you and what
+      makes that part frustrating?
+    </header>
+    <p>
+      I think its the loading time between each refresh and redirection. I
+      appreciate that its part of the experience but I dont have the patience
+      for it.
+    </p>
+    <header class="my-class1">
+      13. What is the most satisfying part of the interaction to you and what
+      makes that part satisfying?
+    </header>
+    <p>
+      I guess that I have control over the website. How it moves is based on my
+      mouse and it is satisfying to create the patterns and movement myself. As
+      well as the colour coordination and pallet.
     </p>
   </body>
 </html>
