changed index and style

--- a/asssignment1/Index.html
+++ b/asssignment1/Index.html
@@ -6,7 +6,9 @@
     <title>Interactive Media Assignment 1</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Interactive media assignment 1</h1>
