changed style sheet and added text to index

--- a/asssignment1/Index.html
+++ b/asssignment1/Index.html
@@ -6,22 +6,29 @@
     <title>Interactive Media Assignment 1</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>Interactive media assignment 1</h1>
-    <header class="my-class2">
-      Jumi Suzuki-Carpenter S4022332
-    </header>
+    <header class="my-class2">Jumi Suzuki-Carpenter S4022332</header>
     <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rem tempore
-      et pariatur, in, doloremque harum provident, eius magni unde laudantium
-      aliquam officiis exercitationem odit? Exercitationem quos accusamus ad
-      recusandae!
+      I chose this webpage as the first thing that caught my attention was the
+      colours. I wanted to explore the page more as I found that the 3D elements
+      stood out to me compared to the flat image webpages. The name “Luniverse”
+      drew me in as it sounded futuristic and creative, sort of leaving me to
+      have no expectations about the contents of the page and its actions.
     </p>
     <img src="luni.jpeg" alt="" />
 
@@ -39,7 +46,14 @@
       2. Spend two minutes with the experience and create a list of each of your
       discrete actions.
     </header>
-    <p>list</p>
+    <li>
+      When mouse goes on “islands” it pops out, and expands in size and text
+      appear
+    </li>
+    <li>When you click on objects they do a movement or action</li>
+    <li>
+      The speed of my mouse and its movements determines how the page moves
+    </li>
     <header class="my-class1">
       3. What part of the experience did you spend the most time engaging with?
     </header>
