added a video and changed style and index

--- a/asssignment1/Index.html
+++ b/asssignment1/Index.html
@@ -79,7 +79,9 @@
       explore the website. Bringing “coding life” to the real world for new and
       innovative brands
     </p>
-
+    <video src="Luniverse.mp4" controls>
+      <!-- i added a video as if someone never saw the webpage before, it is a good oppurtunity to view it as the next questions are about how I feel with the page -->
+    </video>
     <header class="my-class1">
       6. How does the interactive experience communicate this primary goal?
     </header>
