added a link into index and changed styling

--- a/asssignment1/Index.html
+++ b/asssignment1/Index.html
@@ -31,7 +31,7 @@
       have no expectations about the contents of the page and its actions.
     </p>
     <img src="luni.jpeg" alt="" />
-
+    <a href="https://www.luni.app/" target="_blank"> Click here to visit Luniverse</a>
     <header class="my-class my-class1">
       1. What was the first thing you paid attention to when interacting with
       the experience?
