--- a/asssignment1/Index.html
+++ b/asssignment1/Index.html
@@ -117,7 +117,7 @@
       9. What other media forms (digital or otherwise) does the experience
       reference?
     </header>
-    <p>Mainly 3D modelling and UX design. Potentially colour understanding</p>
+    <p>Mainly 3D modelling and UX design. Potentially colour spectrum based design.</p>
 
     <header class="my-class1">
       10. What does this reference/s communicate to you about how you should act
@@ -152,5 +152,8 @@
       mouse and it is satisfying to create the patterns and movement myself. As
       well as the colour coordination and pallet.
     </p>
+    <h1>
+      THANK YOU!
+    </h1> I add
   </body>
 </html>
