changed file name and index text

--- a/Assignment1/Index.html
+++ b/Assignment1/Index.html
@@ -25,7 +25,7 @@
     <header class="my-class2">Jumi Suzuki-Carpenter S4022332</header>
     <p>
       I chose this webpage as the first thing that caught my attention was the
-      colours. I wanted to explore the page more as I found that the 3D elements
+      colour pallet. I wanted to explore the page more as I found that the 3D elements
       stood out to me compared to the flat image webpages. The name “Luniverse”
       drew me in as it sounded futuristic and creative, sort of leaving me to
       have no expectations about the contents of the page and its actions.
