changed index text

--- a/Assignment1/Index.html
+++ b/Assignment1/Index.html
@@ -25,13 +25,16 @@
     <header class="my-class2">Jumi Suzuki-Carpenter S4022332</header>
     <p>
       I chose this webpage as the first thing that caught my attention was the
-      colour pallet. I wanted to explore the page more as I found that the 3D elements
-      stood out to me compared to the flat image webpages. The name “Luniverse”
-      drew me in as it sounded futuristic and creative, sort of leaving me to
-      have no expectations about the contents of the page and its actions.
+      colour pallet. I wanted to explore the page more as I found that the 3D
+      elements stood out to me compared to the flat image webpages. The name
+      “Luniverse” drew me in as it sounded futuristic and creative, sort of
+      leaving me to have no expectations about the contents of the page and its
+      actions.
     </p>
     <img src="luni.jpeg" alt="" />
-    <a href="https://www.luni.app/" target="_blank"> Click here to visit Luniverse</a>
+    <a href="https://www.luni.app/" target="_blank">
+      Click here to visit Luniverse</a
+    >
     <header class="my-class my-class1">
       1. What was the first thing you paid attention to when interacting with
       the experience?
@@ -40,7 +43,8 @@
       When the page opens, you are greeted with floating images. There's a stage
       in the middle that takes up most of the space and that is what first
       caught my attention. As I interacted with it, I was drawn into its subtle
-      movement when the mouse hovers over the webpage.
+      movement when the mouse hovers over the webpage, and its layout being
+      horizontal, with little to no scrolling needed.
     </p>
     <header class="my-class1">
       2. Spend two minutes with the experience and create a list of each of your
@@ -59,16 +63,19 @@
     </header>
     <p>
       Because I was intrigued by the mouse causing objects to move, I spent the
-      most time clicking on objects to see where it redirects me and what
-      appears. I went back and forth between pages and simply hovering my mouse
-      to see if there is any correlation between the movements and exploring
-      content is in the webpage.
+      most time clicking on objects to see where it redirects me, and what
+      appears or disappears. I went back and forth between pages whilst simply
+      hovering my mouse to see if there is any correlation between the mouse
+      movements and content.
     </p>
     <header class="my-class1">
       4. What was the most common action in your two minute interaction with the
       experience?
     </header>
-    <p>Mouse movement based interactions and page redirection</p>
+    <p>
+      Mouse movement based interactions and page redirection, as well as the
+      text and images floating upwards during page redirection
+    </p>
 
     <header class="my-class1">
       5. What is your impression of the intended primary goal of the interactive
@@ -77,7 +84,7 @@
     <p>
       Its an interaction base website that encourages users to be creative, and
       explore the website. Bringing “coding life” to the real world for new and
-      innovative brands
+      innovative brands that reflect their websites layout and functionalities.
     </p>
     <video src="Luniverse.mp4" controls>
       <!-- i added a video as if someone never saw the webpage before, it is a good oppurtunity to view it as the next questions are about how I feel with the page -->
@@ -101,23 +108,27 @@
       are mainly three pages. Which is the main page, app pages, and the talents
       page. Users can explore this page within a couple of minutes but this
       could vary depending on how much users choose to experiment with the
-      interactions
+      interactions or distracted by the movement it comes with.
     </p>
     <header class="my-class1">
       8. How does the interactive experience communicate how it should be
       interacted with over time?
     </header>
     <p>
-      Using 3D assets and minimal text. The layout of the website and its
-      contents has minimal text, focusing on visuals and movement. This can
+      Using 3D assets and minimal text to communicate ts goal and brand, the
+      layout of the website brings focus on visuals and movement. This can
       reflect how it encourages users to navigate the website with a creative
-      mind and continuous exploration
+      mind and continuous exploration, as it has a loop pattern in its
+      redirection
     </p>
     <header class="my-class1">
       9. What other media forms (digital or otherwise) does the experience
       reference?
     </header>
-    <p>Mainly 3D modelling and UX design. Potentially colour spectrum based design.</p>
+    <p>
+      Mainly 3D modelling and UX design. Potentially colour spectrum based
+      design.
+    </p>
 
     <header class="my-class1">
       10. What does this reference/s communicate to you about how you should act
@@ -133,7 +144,11 @@
       11. What does this reference/s communicate to you about how you should
       feel when engaging with your research experience?
     </header>
-    <p>To be open minded and less harsh on the websites layout</p>
+    <p>
+      To be open minded and less harsh on the websites layout. There is no
+      "game" aspect to the interactions so its focused on the users ability to
+      navigate the iste.
+    </p>
     <header class="my-class1">
       12. What is the most frustrating part of the interaction to you and what
       makes that part frustrating?
@@ -141,7 +156,7 @@
     <p>
       I think its the loading time between each refresh and redirection. I
       appreciate that its part of the experience but I dont have the patience
-      for it.
+      for it. Potentially, the lac of content but it feels compensated with the visual effects. 
     </p>
     <header class="my-class1">
       13. What is the most satisfying part of the interaction to you and what
@@ -152,8 +167,7 @@
       mouse and it is satisfying to create the patterns and movement myself. As
       well as the colour coordination and pallet.
     </p>
-    <h1>
-      THANK YOU!
-    </h1> I add
+    <h1>THANK YOU!</h1>
+    I add
   </body>
 </html>
