--- a/Assignment1/Index.html
+++ b/Assignment1/Index.html
@@ -156,7 +156,7 @@
     <p>
       I think its the loading time between each refresh and redirection. I
       appreciate that its part of the experience but I dont have the patience
-      for it. Potentially, the lac of content but it feels compensated with the visual effects. 
+      for it. Potentially, the lack of content but it feels compensated with the visual effects. 
     </p>
     <header class="my-class1">
       13. What is the most satisfying part of the interaction to you and what
