--- a/Assignment1/Index.html
+++ b/Assignment1/Index.html
@@ -44,7 +44,9 @@
       in the middle that takes up most of the space and that is what first
       caught my attention. As I interacted with it, I was drawn into its subtle
       movement when the mouse hovers over the webpage, and its layout being
-      horizontal, with little to no scrolling needed.
+      horizontal, with little to no scrolling needed. I was curious as how they
+      were able to code the floating images that look 3D into the webpage, as it
+      was all mouse focused.
     </p>
     <header class="my-class1">
       2. Spend two minutes with the experience and create a list of each of your
@@ -66,7 +68,8 @@
       most time clicking on objects to see where it redirects me, and what
       appears or disappears. I went back and forth between pages whilst simply
       hovering my mouse to see if there is any correlation between the mouse
-      movements and content.
+      movements and content. I wanted to see what would pop up, when my mouse
+      was at a specific place on the page
     </p>
     <header class="my-class1">
       4. What was the most common action in your two minute interaction with the
@@ -85,6 +88,10 @@
       Its an interaction base website that encourages users to be creative, and
       explore the website. Bringing “coding life” to the real world for new and
       innovative brands that reflect their websites layout and functionalities.
+      I feel that it also intendeds to have minimal scorlling motions to really
+      draw users into the subtle movement. Instead of contents scrooling up like
+      usual, this webpage makes them float up instead, there is a good
+      consistency in the page design and function.
     </p>
     <video src="Luniverse.mp4" controls>
       <!-- i added a video as if someone never saw the webpage before, it is a good oppurtunity to view it as the next questions are about how I feel with the page -->
@@ -97,7 +104,8 @@
       interactive/fun layout of the website. With 3D assets, floating motions
       and exploration based interactions. This enhances the experience
       encouraging creative thinking when navigating the website and shows that
-      its talents are creative, innovative and iconic.
+      its talents are creative, innovative and iconic. Theres consistency of
+      layout, deisng and movement through out.
     </p>
     <header class="my-class1">
       7. What is your impression of how the experience should be interacted with
@@ -108,7 +116,10 @@
       are mainly three pages. Which is the main page, app pages, and the talents
       page. Users can explore this page within a couple of minutes but this
       could vary depending on how much users choose to experiment with the
-      interactions or distracted by the movement it comes with.
+      interactions or distracted by the movement it comes with. Theres a few
+      ways to get to the app pages such as scrolling down or clilcking on them.
+      Lots of exploration can be done which can encourage a longer engagement
+      time with the webpage.
     </p>
     <header class="my-class1">
       8. How does the interactive experience communicate how it should be
@@ -118,8 +129,8 @@
       Using 3D assets and minimal text to communicate ts goal and brand, the
       layout of the website brings focus on visuals and movement. This can
       reflect how it encourages users to navigate the website with a creative
-      mind and continuous exploration, as it has a loop pattern in its
-      redirection
+      mind and continuous exploration, as it has a loop pattern when it comes to
+      pages.
     </p>
     <header class="my-class1">
       9. What other media forms (digital or otherwise) does the experience
@@ -138,7 +149,9 @@
       I think to not assume what the intention of the website is and jump to
       conclusions. I almost didn't choose this website as the complicated
       navigation made me slightly not bothered to go further as I assumed it
-      would be hard to understand the content and intention.
+      would be hard to understand the content and intention. However, the longer
+      I used it, the more exciting I found it due to being able to just throw my
+      mouse everywhere.
     </p>
     <header class="my-class1">
       11. What does this reference/s communicate to you about how you should
@@ -147,7 +160,7 @@
     <p>
       To be open minded and less harsh on the websites layout. There is no
       "game" aspect to the interactions so its focused on the users ability to
-      navigate the iste.
+      navigate the webpage. 
     </p>
     <header class="my-class1">
       12. What is the most frustrating part of the interaction to you and what
@@ -156,7 +169,8 @@
     <p>
       I think its the loading time between each refresh and redirection. I
       appreciate that its part of the experience but I dont have the patience
-      for it. Potentially, the lack of content but it feels compensated with the visual effects. 
+      for it. Potentially, the lack of content but it feels compensated with the
+      visual effects.
     </p>
     <header class="my-class1">
       13. What is the most satisfying part of the interaction to you and what
