--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- i chose to do the study music. My interactive elemnts are the like button, music, email and image radius change. I did research on soothing colours and sourced sounds and imnages online -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
